--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
     <div class="wrapper">
 
         <header>
-            <div class="logo">
-                <a href="/"><img src="/assets/img/logo.webp"></a>
+            <div class="header-1">
+                <a href="/"><img src="https://res.cloudinary.com/ddv/image/upload/v1657944427/JLD/logo.webp"></a>
+            </div>
+            <div class="header-2">
+                <a href="/"><img src="https://res.cloudinary.com/ddv/image/upload/v1657944427/JLD/logo.webp"></a>
+            </div>
+            <div class="header-3">
+                <a href="/"><img src="https://res.cloudinary.com/ddv/image/upload/v1657944427/JLD/logo.webp"></a>
             </div>
         </header>
 
