--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="style.css">
-    <script src="accordion.js"></script>
     <title>Template Landing Page</title>
 </head>
 
@@ -16,6 +15,7 @@
     <div class="wrapper">
 
         <header>
+            <h1>HEADER</h1>
             <div class="header-1">
                 <a href="/"><img src="https://res.cloudinary.com/ddv/image/upload/v1657944427/JLD/logo.webp"></a>
             </div>
@@ -28,6 +28,10 @@
         </header>
 
         <main>
+            <h1>ICON BOX 1</h1>
+            <div>
+
+            </div>
         </main>
 
         <footer>
