--- a/index.html
+++ b/index.html
@@ -1,387 +1,85 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/img/logoicon.webp"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <title>TemplateLandingPage</title>
+    <title>Document</title>
     <style>
-        body{
-            margin: 0 auto;
-            font-family: 'PT Sans', sans-serif;
-            background-color: rgb(248, 248, 248);
-        }
-        h1,h2,h3,h4,h5,h6{
-            font-family: 'Montserrat', sans-serif;
-        }
-        h1{
-            display: block;
-            font-size: 1.5em;
-            margin-block-start: 0.83em;
-            margin-block-end: 0.83em;
-            margin-inline-start: 0px;
-            margin-inline-end: 0px;
-            font-weight: bold;
-
-        }
-        h2{
-            display: block;
-            font-size: 1.17em;
-            margin-block-start: 1em;
-            margin-block-end: 1em;
-            margin-inline-start: 0px;
-            margin-inline-end: 0px;
-            font-weight: bold;
-        }
-        h3{
-            display: block;
-            font-size: 1em;
-            margin-block-start: 1.33em;
-            margin-block-end: 1.33em;
-            margin-inline-start: 0px;
-            margin-inline-end: 0px;
-            font-weight: bold;
-        }
-        h4{
-            display: block;
-            font-size: 0.83em;
-            margin-block-start: 1.67em;
-            margin-block-end: 1.67em;
-            margin-inline-start: 0px;
-            margin-inline-end: 0px;
-            font-weight: bold;
-        }
-        h5{
-            display: block;
-            font-size: 0.67em;
-            margin-block-start: 2.33em;
-            margin-block-end: 2.33em;
-            margin-inline-start: 0px;
-            margin-inline-end: 0px;
-            font-weight: bold;
-
-        }
         *{
             box-sizing: border-box;
         }
-        header{
-            width: 100%;
-            height: auto;
-        }
-        ul{
-            padding: 0;
-            list-style-type: none;
-        }
-        .wrapper{
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 0 10px;
-            background-color: skyblue;
-        }
-        .wrapper img{
-            margin-top: 20px;
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin-right: auto;
-            margin-left: auto;
-        }
-        .logo{
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            width: 600px;
-            padding: 10px;
-        }
-        .hero{
-            padding-top: 30px;
-            text-align: center;
-        }
-        .hero img{
-            margin-top: 20px; 
-            max-width: 100%; 
-            height: auto; 
-            display: block; 
-            margin-left: auto; 
-            margin-right: auto;
-        }
-        .grid-2{
-        display: grid; 
-        grid-template-columns: auto auto; 
-        font-weight: bold;                                              
-        }
-        .icon-box{
-        display: inline-flex; 
-        margin-left: 10%;
-        }
-        .icon-box img{
-        margin: 15px 5px; 
-        width: 25px; 
-        height: 25px;
-        }
-        .icon-box-center{
-        background-color: white; 
-        text-align: center; 
-        border-radius: 10px; 
-        padding: 10px; 
-        margin: 15px;
-        }
-        .center{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        }
-        .left{
-            display: flex;
-            justify-content: left;
-            align-items: center;
-        }
-        .right{
-            display: flex;
-            justify-content: right;
-            align-items: center;
-        }
-        .button-primary{
-            margin: 50px;
-            padding: 15px;
-            background-color: cornflowerblue;
-            border-radius: 5px;
-            border: 2px solid #16b6;
-            font-size: 18px;
-        }
-        .button-primary a{
-            color: #fff;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .box image img{
-            margin-top: 20px;
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        .icon-4{
-            display: grid;
-            grid-template-columns: 35% 65%;
-            background-color: aquamarine;
-            border-radius: 10px;
-            box-shadow: 2px 2px 3px violet;
-            margin-bottom: 10px;
-        }     
-        .icon-4 img, .icon-5 img, .icon-6 img, .icon-7 img{
-            margin: 10px;
-            width: 70px;
-            height: 70px;
-        }
-        .icon-5{
-            display: grid;
-            grid-template-columns: 35% 65%;
-            background-color: cadetblue;
-            border-radius: 10px;
-            box-shadow: 2px 2px 3px thistle;
-            margin-bottom: 10px;
-        }
-        .icon-6{
-            display: grid;
-            grid-template-columns: 35% 65%;
-            background-color: cornflowerblue;
-            border-radius: 10px;
-            box-shadow: 2px 2px 3px hotpink;
-            margin-bottom: 10px;
-        }
-        .icon-7{
-            display: grid;
-            grid-template-columns: 35% 65%;
-            background-color: darkcyan;
-            border-radius: 10px;
-            box-shadow: 2px 2px 3px slateblue;
-            margin-bottom: 10px;
-        }
-        .short-desc{
-            display: block;
-            background-color: #e7f8e8;
-            border-radius: 10px;
-            margin-bottom: 10px;
-            padding: 15px;
-            text-align: center;
-            box-shadow: 2px 2px 3px;
-        }
-        .title-product{
-            margin-top: 50px;
-            text-align: center;
-            border-bottom: 2px solid rgb(178, 248, 255);
-        }
-        .box-product{
-            text-align: center;
-        }
-        .box-product-img{
-            max-width: 600px;
-            height: auto;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 50px;
-        }
-        .box-product-desc{
-            background-color: #c2efff;
-            padding: 10px;
-            border-radius: 10px;
-        }
+/* header utama*/
+.wrapper {
+max-width: 600px;
+margin:0 auto;
+padding :0 10px;
+background-color: blueviolet;
+
+}
+
+header{
+  display: flex;
+  width: 100%;
+ ;
+
+}
+
+/* bagian gambar*/
+ .wrapper img {
+  margin-top: 20px;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  
+} 
+ .logo{
+  display: block;
+  width: 200px;
+  padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
+} 
+.logokiri{
+  float:left;
+  display:block;
+  width:200px;
+}
+.logokanan{
+  float:right;
+  display:block;
+  width:200px;
+}
+.hero {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    padding-top: 30px;
+    text-align: center;
+}
+
     </style>
 </head>
 <body>
-<!--Untuk Menambahkan Logo Perusahaan-->
     <div class="wrapper">
-        <!--<header>
-            <div class="logo"><a href="/">
-        <img src="assets/img/icon_1.png">
-    </a>-->
-<main>
-<!--Unruk Nama Dan Visi Perusahaan-->
-    <div class="hero">
-        <img src="assets/img/icon_2.png">
-        <h1>PERUSAHAAN LOREM</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, dolor dolorum explicabo doloremque quidem rem, repellendus corrupti velit eius ad placeat, vero quasi facere. Odit ipsum commodi mollitia aliquam veritatis.</p>
-    </div>
-<!--Untuk Tulisan Visi Dalam Box-->
-    <div class="icon-box-center">
-        <p>Lorem1</p>
-    </div>
-    <div class="icon-box-center">
-        <p>Lorem2</p>
-    </div>
-    <div class="icon-box-center">
-        <p>Lorem3</p>
-    </div>
-    <div class="icon-box-center">
-        <p>Lorem4</p>
-    </div>
-<!--Untuk Tulisan Visi Dalam Bentuk Grid-->
-    <div class="grid-2">
-        <div class="icon-box">
-            <img src="assets/img/verified.png" alt>
-            <p>Lorem1</p>
-        </div>
-        <div class="icon-box">
-            <img src="assets/img/verified.png" alt>
-            <p>Lorem2</p>
-        </div>
-        <div class="icon-box">
-            <img src="assets/img/verified.png" alt>
-            <p>Lorem3</p>
-        </div>
-        <div class="icon-box">
-            <img src="assets/img/verified.png" alt>
-            <p>Lorem4</p>
-        </div>
-<!--Button Tengah-->
-    <div class="center">
-        <button class="button-primary">
-            <a href="#">CONTACT</a>
-        </button>
-    </div>
-<!--Button Kiri (Laptop)-->
-    <div class="left">
-        <button class="button-primary">
-            <a href="#">INSTAGRAM</a>
-        </button>
-    </div>
-<!--Button Kanan (Laptop)-->
-    <div class="right">
-        <button class="button-primary">
-            <a href="#">FACEBOOK</a>
-        </button>
-    </div>
-    </div>
-<!--Untuk Menambahkan Gambar Pada box-->
-    <div class="box-image">
-        <img src="assets/img/img_1.png" alt>
-    </div>
-<!--Untuk Menampilkan Icon Keunggulan Perusahaan-->
-    <div class="icon-4">
-        <div>
-            <img src="assets/img/icon_1.png" alt>
-        </div>
-        <div>
-            <h2>10.000+/Hari</h2>
-            <p>Lorem Produksi</p>
-        </div>
-    </div>
-    <div class="icon-5">
-        <div>
-            <img src="assets/img/icon4.png" alt>
-        </div>
-        <div>
-            <h2>100+</h2>
-            <p>Karyawan Lorem</p>
-        </div>
-    </div>
-    <div class="icon-6">
-        <div>
-            <img src="assets/img/icon_2.png" alt>
-        </div>
-        <div>
-            <h2>1.000.000+/Pcs</h2>
-            <p>Lorem Telah Produksi</p>
-        </div>
-    </div>
-    <div class="icon-7">
-        <div>
-            <img src="assets/img/icon3.png" alt>
-        </div>
-        <div>
-            <h2>Bintang 5</h2>
-            <p>Klien Puas</p>
-        </div>
-    </div>
-<!--Untuk Deskripsi Pendek Mengenai Perusahaan-->
-    <div class="short-desc">
-        <div>
-            <h3>PERUSAHAAN LOREM</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae explicabo consequatur corporis, optio ad deleniti, fugiat voluptate eaque perspiciatis culpa nesciunt tempore debitis facilis dolores, vero qui odio. Quasi, possimus!
-                <strong>K1</strong>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis quas, ex magnam aliquid veniam qui non dolorum, quae modi error cum sapiente culpa, aspernatur earum at aliquam maxime tenetur? Corrupti?
-                <strong>K2</strong>
-            </p>
-        </div>
-        </div>
-<!--Untuk Menampilkan Daftar Produk Dalam Box-->
-    <div class="title-product">
-        <h1>Lorem Product</h1>
-    </div>
-    <div class="box-product">
-        <div>
-            <img src="assets/img/img_1.png" alt>
-        </div>
-        <div class="box-product-desc">
-            <h3>Product 1</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia numquam sequi, sed laudantium nihil amet nam officia consequuntur distinctio nostrum placeat velit. Distinctio, magni natus voluptate optio esse nostrum quisquam.</p>
-        </div>
-    </div>
-        <div class="box-product">
-            <div>
-                <img src="assets/img/img_2.png" alt>
+      <header>
+        <div class="logo">
+          <img src="ikon.png" >
+          </div>
+          <div class="logokanan">
+            <img src="ikon.png" >
             </div>
-            <div class="box-product-desc">
-                <h3>Product 2</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia itaque alias facere possimus eius cupiditate excepturi exercitationem officia minus, saepe asperiores ipsa voluptates eum quae consequatur delectus accusamus quisquam laboriosam.</p>
-            </div>
-        </div>
-<!--Untuk Daftar Produk Dalam List-->
-            <ul>Product 1</ul>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui enim quos hic dicta temporibus odit, perferendis, ratione itaque modi porro voluptatum possimus aspernatur laudantium nihil sequi, fugiat sapiente tenetur impedit?</p>
-            <ul>Product 2</ul>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim amet necessitatibus nemo omnis id, laudantium sunt velit beatae, accusantium incidunt quo non! Pariatur, ut. Reprehenderit a iusto nesciunt aliquam quae!</p>
-        </div>
-</main>
-</div>
-</header>
-</div>
+            <div class="logokiri">
+              <img src="ikon.png" >
+              </div>
+      </header>
+      <main>
+       <div class="hero">
+        <p>WELCOME TO</p>
+       <h1>PT Amanah Garment Internasional</h1>
+       <p>A TRUSTED GARMENT COMPANY</p>
+      </div>
+      </main>
+   
+  
+       
 </body>
 </html>
