--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 
     <div class="wrapper-wildan">
         <header>
+             <div class="wrapper">
+      <header>
+        <div class="logo">
+          <img src="ikon.png" >
+          </div>
+          <div class="logokanan">
+            <img src="ikon.png" >
+            </div>
+            <div class="logokiri">
+              <img src="ikon.png" >
+              </div>
 
         </header>
     
