--- a/indexdiana.html
+++ b/indexdiana.html
@@ -16,7 +16,23 @@
 
     <div class="wrapper-wildan">
         <header>
+            <div class="wrapper">
+                <header>
 
+                    <p>logo tengah</p>
+                  <div class="logo">
+                    <img src="https://res.cloudinary.com/ddv/image/upload/v1658475334/JLD/logo-jlda.png" >
+                    </div>
+
+                    <p>logo kanan</p>
+                    <div class="logokanan">
+                      <img src="https://res.cloudinary.com/ddv/image/upload/v1658475334/JLD/logo-jlda.png" >
+                      </div>
+
+                      <p>logo kiri</p>
+                      <div class="logokiri">
+                        <img src="https://res.cloudinary.com/ddv/image/upload/v1658475334/JLD/logo-jlda.png" >
+                        </div>
                   
                         
         </header>
